--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
+	<link rel="stylesheet" href="css/community.css"/>
 	<script src="js/bootstrap.min.js" type="application/javascript"></script>
 	
 </head>
@@ -19,7 +20,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="/">Brand</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -61,6 +62,33 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<div class="container-fluid main">
+	<div class="row">
+	  <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12" >
+	  <h2><span class="glyphicon glyphicon-list" aria-hidden="true"> </span>发现</h2>
+	  <hr>
+	<div class="media"  th:each="question : ${questions}">
+	  <div class="media-left">
+	    <a href="#">
+	      <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
+	    </a>
+	  </div>
+	  <div class="media-body" >
+	    <h4 class="media-heading" th:text="${question.title}"></h4>
+		<span th:text="${question.description}"></span><br>
+	    <span class="comment-desc"></span><span th:text="${question.commentCount}"></span> 个评论 • <span th:text="${question.viewCount}"></span>次浏览 • <span th:text="${#calendars.format(question.gmtCreate,'dd MMMM yyyy')}"></span></span>
+	  </div>
+	</div>
 
+	  </div>
+	  <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12" >
+	  	<h3>Guideline for Issue Initiation</h3>
+	  	question tag:please concise the question description, limted 25 words<br>
+	  	question supplement:detailed appendix of the question, so that it is clear with relevant docs<br>
+	  	choose tag:choose one or more tags that matches the overall of question, limited 10 words<br>
+	  	
+	  </div>
+	</div>
+</div>
 </body>
 </html>
